fix all mouseDown events not firing on iOS

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -45,7 +45,7 @@
 
 #flyoutMenu h1:hover {
     color: black;
-    cursor: url("../resources/svgs/icons8-checkmark.svg"), auto;
+    /* cursor: url("../resources/svgs/icons8-checkmark.svg"), auto; */
     /* cursor: pointer; */
 
 }
